--- a/repo/index.html
+++ b/repo/index.html
@@ -7,15 +7,62 @@
     <!-- Bootstrap styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- project styles -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/spr1tsy.css">
   </head>  
-  <body>
-    <h1>Hi there!</h1>
-    
-    <p>
-      I'm your cool new webpage.
-    </p>
+  <body class= "vh-100">
+   
+<!-- 
+  body h-100
+  DIV container h-100
+    div h-40
+    div h-10
+    div h-30
+    div h-20
+    must equal the h of their parent 
+    div
+    body 
+-->  
+
+<div class="container h-100">
+  <!-- row
+  column
+then the rest of present code
+-->
+  <div class="card border-primary h-100">
+    <div>
+      <div>
+        <div class="card-body">
+        <h1 id="mainText">Main state display text mind reader project</h1>
+        <button class="blueButton" id="blueButton">Blue button</button>
+        <h4 id="belowButtonText">Text below blue button</h4>
+        <button class="roundButton" id="roundButton">Refresh button</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
+
+
+
+
+<!--
+    <div class="container">
+      <div class="row w-100 h-100">
+        <div class="col">
+          <div class="card mx-auto mb-2">
+            <div class="card-body">
+              <h1 class="card-title">Main state display text mind reader</h1>
+              <a href="#" class="btn btn-primary">Next</a>
+              <h4 class="card-text">Button instructions</h4>
+              <button class="roundButton" id="roundButton">Round</button>
+              </div>
+            </div>
+         </div>
+    </div>
+
+  -->
 
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
