html and css updated EOD

--- a/repo/index.html
+++ b/repo/index.html
@@ -25,23 +25,24 @@
 -->  
 
 <div class="container h-100">
-  <!-- row
-  column
-then the rest of present code
--->
-  <div class="card border-primary h-100">
-    <div>
-      <div>
-        <div class="card-body">
-        <h1 id="mainText">Main state display text mind reader project</h1>
-        <button class="blueButton" id="blueButton">Blue button</button>
-        <h4 id="belowButtonText">Text below blue button</h4>
-        <button class="roundButton" id="roundButton">Refresh button</button>
+  <div class="row">
+    <div class="column">
+      <div class="card border-primary h-100">
+        <div>
+         <div>
+            <div class="card-body">
+            <h1 id="mainText">Main state display text mind reader project</h1>
+            <button class="blueButton" id="blueButton">Blue button</button>
+            <h4 id="belowButtonText">Text below blue button</h4>
+            <button class="roundButton" id="roundButton">Refresh button</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
+
 
 
 
