update to html java and css

--- a/repo/index.html
+++ b/repo/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/spr1tsy.css">
   </head>  
-  <body class= "vh-100">
+  <body class="vh-100">
    
 <!-- 
   body h-100
@@ -24,10 +24,10 @@
     body 
 -->  
 
-<div class="container h-100">
+<div class="container h-70">
   <div class="row">
     <div class="column">
-      <div class="card border-primary h-100">
+      <div class="card border-borderBlue h-100">
         <div>
          <div>
             <div class="card-body">
