--- a/repo/index.html
+++ b/repo/index.html
@@ -24,17 +24,21 @@
     body 
 -->  
 
-<div class="container h-70">
+<div class="container d-flex h-70">
   <div class="row">
     <div class="column">
       <div class="card border-borderBlue h-100">
         <div>
          <div>
             <div class="card-body">
-            <h1 id="mainText">Main state display text mind reader project</h1>
-            <button class="blueButton" id="blueButton">Blue button</button>
-            <h4 id="belowButtonText">Text below blue button</h4>
-            <button class="roundButton" id="roundButton">Refresh button</button>
+              <h1 id="mainText">Main state display text mind reader project</h1>
+              <div class="row justify-content-center">
+                <button class="blueButton" id="blueButton">Blue button</button>
+              </div>
+                  <div class="row justify-content-center">
+                  <p id="belowButtonText">Text below blue button</p>
+                  </div>
+                    <button class="roundButton" id="roundButton">Refresh button</button>
             </div>
           </div>
         </div>
