css is fixed! text is below button

--- a/repo/index.html
+++ b/repo/index.html
@@ -35,7 +35,7 @@
               <div class="row justify-content-center">
                 <button class="blueButton" id="blueButton">Blue button</button>
               </div>
-                  <div class="row justify-content-center">
+                  <div class>
                   <p id="belowButtonText">Text below blue button</p>
                   </div>
                     <button class="roundButton" id="roundButton">Refresh button</button>
