--- a/repo/index.html
+++ b/repo/index.html
@@ -24,24 +24,20 @@
     body 
 -->  
 
-<div class="container d-flex h-70">
-  <div class="row">
-    <div class="column">
-      <div class="card border-borderBlue h-100">
-        <div>
-         <div>
-            <div class="card-body">
-              <h1 id="mainText">Main state display text mind reader project</h1>
-              <div class="row justify-content-center">
-                <button class="blueButton" id="blueButton">Blue button</button>
-              </div>
-                  <div class>
-                  <p id="belowButtonText">Text below blue button</p>
-                  </div>
-                    <button class="roundButton" id="roundButton">Refresh button</button>
-            </div>
-          </div>
-        </div>
+<div class="container d-flex">
+  <div class="d-flex flex-column">
+    <div class="d-flex col align-items-center justify-content-center">
+      <div><h1 id="mainText">I can read your mind</h1></div>
+    </div>
+    <div class="d-flex flex-column justify-content-between">
+      <div class="col-12 d-flex">
+        <button class="blueButton align-items-center justify-content-center" id="blueButton">NEXT</button>
+      </div>
+      <div class="col-12 d-flex m-3 align-items-center text-center justify-content-center">
+        <p id="belowButtonText">click next to begin</p>
+      </div>
+      <div class="col-12 m-3 d-flex justify-content-end align-items-end">
+        <button class="roundButton" id="roundButton">refresh</button>
       </div>
     </div>
   </div>
@@ -49,25 +45,6 @@
 
 
 
-
-
-
-<!--
-    <div class="container">
-      <div class="row w-100 h-100">
-        <div class="col">
-          <div class="card mx-auto mb-2">
-            <div class="card-body">
-              <h1 class="card-title">Main state display text mind reader</h1>
-              <a href="#" class="btn btn-primary">Next</a>
-              <h4 class="card-text">Button instructions</h4>
-              <button class="roundButton" id="roundButton">Round</button>
-              </div>
-            </div>
-         </div>
-    </div>
-
-  -->
 
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
