your javascript works!

--- a/repo/index.html
+++ b/repo/index.html
@@ -27,17 +27,17 @@
 <div class="container d-flex">
   <div class="d-flex flex-column">
     <div class="d-flex col align-items-center justify-content-center">
-      <div><h1 id="mainText">I can read your mind</h1></div>
+      <div><h1 id="mainText"></h1></div>
     </div>
     <div class="d-flex flex-column justify-content-between">
       <div class="col-12 d-flex">
-        <button class="blueButton align-items-center justify-content-center" id="blueButton">NEXT</button>
+        <button class="blueButton align-items-center justify-content-center" id="blueButton"></button>
       </div>
       <div class="col-12 d-flex m-3 align-items-center text-center justify-content-center">
-        <p id="belowButtonText">click next to begin</p>
+        <p id="belowButtonText"></p>
       </div>
       <div class="col-12 m-3 d-flex justify-content-end align-items-end">
-        <button class="roundButton" id="roundButton">refresh</button>
+        <button class="roundButton" id="roundButton"></button>
       </div>
     </div>
   </div>
@@ -50,6 +50,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <!-- project JavaScript -->
-    <script src="./js/main.js" defer></script>
+    <script src="../js/main.js" defer></script>
   </body>
 </html>
