--- a/repo/index.html
+++ b/repo/index.html
@@ -11,26 +11,15 @@
     <link rel="stylesheet" href="https://use.typekit.net/spr1tsy.css">
   </head>  
   <body class="vh-100">
-   
-<!-- 
-  body h-100
-  DIV container h-100
-    div h-40
-    div h-10
-    div h-30
-    div h-20
-    must equal the h of their parent 
-    div
-    body 
--->  
+
 
 <div class="container d-flex">
   <div class="d-flex flex-column">
-    <div class="d-flex col align-items-center justify-content-center">
+    <div class="d-flex col m-3 align-items-center text-wrap text-center justify-content-centeralign-items-center justify-content-center">
       <div><h1 id="mainText"></h1></div>
     </div>
     <div class="d-flex flex-column justify-content-between">
-      <div class="col-12 d-flex">
+      <div class="col-12 d-flex m-3 align-items-center text-center justify-content-center">
         <button class="blueButton align-items-center justify-content-center" id="blueButton"></button>
       </div>
       <div class="col-12 d-flex m-3 align-items-center text-center justify-content-center">
@@ -51,5 +40,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <!-- project JavaScript -->
     <script src="../js/main.js" defer></script>
+
   </body>
 </html>
+
+   
+<!-- 
+  body h-100
+  DIV container h-100
+    div h-40
+    div h-10
+    div h-30
+    div h-20
+    must equal the h of their parent 
+    div
+    body 
+-->  
