--- a/repo/index.html
+++ b/repo/index.html
@@ -12,11 +12,11 @@
   </head>  
   <body class="vh-100">
 
-
+<!-- you added overflow to the right div classes, you need to change the breakpoints on page5 text so its not as narrow, maybe every 3-->
 <div class="container d-flex">
   <div class="d-flex flex-column">
-    <div class="d-flex col m-3 align-items-center text-wrap text-center justify-content-centeralign-items-center justify-content-center">
-      <div><h1 id="mainText"></h1></div>
+    <div class="d-flex overflow-hidden col m-3 align-items-center text-center justify-content-center mh-100">
+      <div class="mh-100 overflow-scroll"><h1 id="mainText"></h1></div>
     </div>
     <div class="d-flex flex-column justify-content-between">
       <div class="col-12 d-flex m-3 align-items-center text-center justify-content-center">
